# credis

./: README.md
Tools/: Tools.sh  dep.7z  install-master.bat  install-slave.bat  redis.windows-service.conf  redis_cli.bat  start.bat  startAllRedisNodes.bat  stopAllRedisNodes.bat  uninstall.bat
Tools/master/: redis6379.conf
Tools/sentinel/: sentinel26379.conf
Tools/slave/: redis6380.conf
credis/: CMakeList.txt  CMakeLists.txt  credis.sln
credis/Tools/: redis_cli.bat  redis_cli.sh  redis_server.bat  redis_server.sh
credis/Tools/master/: redis6379.conf
credis/Tools/sentinel/: sentinel26379.conf
credis/Tools/slave/: redis6380.conf
credis/credis/: credis.vcxproj  credis.vcxproj.filters  main.c  main.cpp
credis/credis/cconfig/: ccfg.cpp  ccfg.h  cconfig.cpp
credis/credis/clog/: clog.cpp  clog.h
credis/credis/cnet/: cnet_type.h
credis/credis/credis/: credis.cpp  credis.h  credis_master.cpp  credis_master.h  credis_mgr.cpp  credis_mgr.h  credis_request.cpp  credis_request.h  credis_sentinel.cpp  credis_sentinel.h  credis_slave.cpp  credis_slave.h
credis/credis/cserver/: credis_cfg.cpp  credis_cfg.h
credis/credis/ctime/: ctime_api.h
credis/credis/cutil/: cdigit2str.cpp  cdigit2str.h  cnoncopyable.h
credis/linux/: build.sh
